--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				<li><a href="#demo">Demo</a></li>
 				<li><a href="#getting-started">Getting Started</a></li>
 				<li><a href="#configurations">Configcurations</a></li>
-				<li><a href="#disqus_thread">Discustion</a></li>
+				<li><a href="#disqus_thread">Discussion</a></li>
 			</ul>
 		</header>
 		<nav id="navbar">
